# personal-scripts

./: LICENSE  env.enc  justfile  pyproject.toml
obsidian/: __main__.py  network.py  tags.py
util/: airtable.py  crypt.py  env.py  markdown.py  validators.py
